# haxor-news

./: LICENSE.txt  README.md  hello.py  module_orga.md  pyproject.toml
neo_haxor_news/: __init__.py  completer.py  completions.py  config.py  hacker_news.py  hacker_news_cli.py  haxor.py  keys.py  main.py  main_cli.py  onions.py  pretty_date_time.py  settings.py  style.py  toolbar.py  utils.py  web_viewer.py
neo_haxor_news/lib/: __init__.py  debug_timer.py  pretty_date_time.py
neo_haxor_news/lib/html2text/: html2text.py
scripts/: run_code_checks.sh
tests/: compat.py  mock_hacker_news_api.py  run_tests.py  test_cli.py  test_completer.py  test_config.py  test_config_integration.py  test_hacker_news.py  test_hacker_news_cli.py  test_haxor.py  test_keys.py  test_toolbar.py
tests/data/: comment.py  item.py  markdown.py  regex.py  tip.py  title.py  url.py
