[project]
name = "neo_haxor-news"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "haxor>=1.2.4",
    "markdownify>=0.14.1",
    "prompt-toolkit>=3.0.48",
    "pygments>=2.18.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "mock>=5.1.0",
    "ruff>=0.8.4",
]
